{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 14,
  "lineage": "c1e8858a-0d0c-e4ca-6294-3a37f994feab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-01a81cb08045142d5",
            "domain": "vpc",
            "id": "eipalloc-0198f8c78f19be22c",
            "instance": "i-0878726f98af3cb20",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-072e5012831d1937e",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-13-234-90-14.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.90.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "one"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gway",
            "aws_network_interface.web_networks",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-4",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4a70bd98c6d6441",
            "arn": "arn:aws:ec2:ap-south-1:001694554013:instance/i-0878726f98af3cb20",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0878726f98af3cb20",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-sec-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-072e5012831d1937e"
              }
            ],
            "primary_network_interface_id": "eni-072e5012831d1937e",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "13.234.90.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04645d775f5a631cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050301b0d3ac53e36",
            "tags": {
              "Name": "ubuntu_server_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-089e816844b856ae0"
            ]
          },
          "dependencies": [
            "aws_network_interface.web_networks",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-4",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:001694554013:internet-gateway/igw-0f2ef8e6b9fe9f00d",
            "id": "igw-0f2ef8e6b9fe9f00d",
            "owner_id": "001694554013",
            "tags": {
              "Name": "My_Gateway"
            },
            "vpc_id": "vpc-0a57c9601fc575c2a"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web_networks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0c22f040bc18aabc8",
                "device_index": 0,
                "instance": "i-0878726f98af3cb20"
              }
            ],
            "id": "eni-072e5012831d1937e",
            "ipv6_address_count": 0,
            "mac_address": "02:55:82:e6:90:3a",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-089e816844b856ae0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050301b0d3ac53e36",
            "tags": {
              "Name": "web_networks"
            }
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-4",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0164e5edef3254e9c",
            "owner_id": "001694554013",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2ef8e6b9fe9f00d",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2ef8e6b9fe9f00d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My_Route_Table"
            },
            "vpc_id": "vpc-0a57c9601fc575c2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gway",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09387a7ed5e02055b",
            "route_table_id": "rtb-0164e5edef3254e9c",
            "subnet_id": "subnet-050301b0d3ac53e36"
          },
          "dependencies": [
            "aws_internet_gateway.gway",
            "aws_route_table.rtable",
            "aws_subnet.subnet-4",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:001694554013:security-group/sg-089e816844b856ae0",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089e816844b856ae0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "001694554013",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a57c9601fc575c2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:001694554013:subnet/subnet-050301b0d3ac53e36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-050301b0d3ac53e36",
            "map_public_ip_on_launch": false,
            "owner_id": "001694554013",
            "tags": {
              "Name": "My_Subnet"
            },
            "vpc_id": "vpc-0a57c9601fc575c2a"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:001694554013:vpc/vpc-0a57c9601fc575c2a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cf944d6464a01b2b",
            "default_route_table_id": "rtb-059872a8d5f08257b",
            "default_security_group_id": "sg-0ec6db854f937a09c",
            "dhcp_options_id": "dopt-ed805e86",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a57c9601fc575c2a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-059872a8d5f08257b",
            "owner_id": "001694554013",
            "tags": {
              "Name": "Ingress_Gateway"
            }
          }
        }
      ]
    }
  ]
}